--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
     "express": "^4.17.2",
     "i": "^0.3.7",
     "npm": "^8.3.0",
-    "pg": "^8.7.1"
+    "pg": "^8.7.1",
+    "uuid": "^8.3.2"
   },
   "name": "commentdb",
   "version": "1.0.0",
   "main": "index.js",
-  "devDependencies": {},
   "scripts": {
     "start": "node index.js"
   },
